Added tests, improved Makefile
