# controllers/login.go
@@ -74,10 +74,19 @@ func PostUser(c *gin.Context) {
 		}
 	} else {
 		erro.Severity, erro.Body = "error", "Fields are empty"
-		c.JSON(400, erro)
+		c.JSON(404, erro)
 	}
 }
 
+// GetUSERDetails godoc
+// @Summary Get details about user
+// @Description Fetches all details about specific user depending on provided id
+// @Tags Users
+// @Produce json
+// @Param id path int true "User ID"
+// @Success 200 {object} models.User
+// @Failure 404 {object} models.Err
+// @Router /users/{id} [get]
 func GetUserDetail(c *gin.Context) {
 	id := c.Params.ByName("id")
 	var user models.User
@@ -91,54 +100,3 @@ func GetUserDetail(c *gin.Context) {
 		c.JSON(404, erro)
 	}
 }
-
-// func Login(c *gin.Context) {
-// 	var user models.User
-// 	c.Bind(&user)
-// 	err := dbmap.SelectOne(&user, "select * from user where Username=? LIMIT 1", user.Username)
-// 	if err == nil {
-// 		user_id := user.Id
-
-// 		content := &models.User{
-// 			Id:        user_id,
-// 			Username:  user.Username,
-// 			Password:  user.Password,
-// 			Firstname: user.Firstname,
-// 			Lastname:  user.Lastname,
-// 		}
-// 		c.JSON(200, content)
-// 	} else {
-// 		c.JSON(404, gin.H{"error": "user not found"})
-// 	}
-// }
-
-// func UpdateUser(c *gin.Context) {
-// 	id := c.Params.ByName("id")
-// 	var user models.User
-// 	err := dbmap.SelectOne(&user, "SELECT * FROM user WHERE id=?", id)
-// 	if err == nil {
-// 		var json models.User
-// 		c.Bind(&json)
-// 		user_id, _ := strconv.ParseInt(id, 0, 64)
-// 		user := models.User{
-// 			Id:        user_id,
-// 			Username:  user.Username,
-// 			Password:  user.Password,
-// 			Firstname: json.Firstname,
-// 			Lastname:  json.Lastname,
-// 		}
-
-// 		if user.Firstname != "" && user.Lastname != "" {
-// 			_, err = dbmap.Update(&user)
-// 			if err == nil {
-// 				c.JSON(200, user)
-// 			} else {
-// 				checkErr(err, "Updated failed")
-// 			}
-// 		} else {
-// 			c.JSON(400, gin.H{"error": "fields are empty"})
-// 		}
-// 	} else {
-// 		c.JSON(404, gin.H{"error": "user not found"})
-// 	}
-// }
