# docs/swagger.yaml
@@ -87,4 +87,27 @@ paths:
       summary: Create new user
       tags:
       - Users
+  /users/{id}:
+    get:
+      description: Fetches all details about specific user depending on provided id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Err'
+      summary: Get details about user
+      tags:
+      - Users
 swagger: "2.0"
